[project]
name = "pystretch"
version = "0.1.0"
description = "20-20-20"
authors = [{ name = "skarfie123", email = "rahulpai@rocketmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"pystretch" = "pystretch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pystretch"]
